# w528-pdf-extraction-toolkit

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  main.py  pdfx-spec.md  pyproject.toml
dev-notes/: issue-1.md  phase-3-ocr-vlm.md  testing.md
docs/: testing.md  usage.md
src/pdfx/: __init__.py  cli.py  config.py  core.py  markdown.py  models.py  ocr.py  pages.py  vlm_utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_images.py  test_index.py  test_markdown.py  test_ocr.py  test_pages.py  test_render.py  test_search.py  test_tables.py  test_text.py  test_vlm_utils.py
