[project]
name = "pdfx"
version = "0.3.0"
description = "PDF extraction toolkit: JSON-first library and CLI for text, tables, images, and page rendering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "typer>=0.26.8",
]

[project.optional-dependencies]
ai = [
    "openai>=1.60.0",
]

[project.scripts]
pdfx = "pdfx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfx"]

[dependency-groups]
dev = [
    "openai>=1.60.0",
    "pytest>=9.1.1",
    "reportlab>=5.0.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
